# StandardProject

./: .clang-format  CMakeLists.txt  LICENSE  README.md
Modules/Animal/: CMakeLists.txt  README.md
Modules/Animal/Example/: README.md  UseSharedPtr.cpp
Modules/Animal/Include/: AnimalBase.h  README.md
Modules/Animal/Python/: README.md
Modules/Animal/Src/: README.md
Modules/Animal/Test/: README.md
Modules/Python/: Animal.py
